@@ -645,3 +645,4 @@ fi
 - query/verify by install transaction id.
 - rpm-4.0.4 release candidate.
 - add cpanflute2, another perl.req fiddle.
+- make peace with gcc-3.1, remove compiler cruft.
